Fix blurry cart badge number

--- a/src/stylesheets/modules/global/_menu.scss
+++ b/src/stylesheets/modules/global/_menu.scss
@@ -36,10 +36,12 @@
 .cart-badge {
   @include position(absolute, $top: -20px, $right: -12px);
   @include sizeEx(18px, 18px);
+  backface-visibility: hidden;
   display: flex;
   justify-content: center;
   background-color: $color-c6;
-  transform: rotate(45deg);
+  transform: rotate(45deg) translateZ(0);
+  -webkit-font-smoothing: subpixel-antialiased;
   z-index: -1;
   b {
     @include font($os, rem(12), $black, 700);
@@ -275,7 +277,6 @@
           transition: transform .5s;
           transition-timing-function: cubic-bezier(.2, 1, .3, 1);
         }
-
         &:hover {
           color: $black;
           &::before {
